# grocery-cash-register

./: CMakeLists.txt  README.md  cashregister.cpp  cashregister.h  database.cpp  database.h  database.txt  grocery-cash-register.AppImage  main.cpp  order.cpp  order.h  orderedproduct.cpp  orderedproduct.h  product.h  productbyweight.cpp  productbyweight.h
